<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenu"
    android:background="@drawable/main_menu">


    <TextView
        android:id="@+id/tvMainMenuTitle"
        android:layout_width="307dp"
        android:layout_height="73dp"
        android:layout_marginTop="4dp"
        android:text="@string/main_menu"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnOptions"
        android:layout_width="123dp"
        android:layout_height="51dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="36dp"
        android:text="@string/options"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPlayGame" />

    <Button
        android:id="@+id/btnHelp"
        android:layout_width="122dp"
        android:layout_height="51dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="36dp"
        android:text="@string/help"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOptions" />

    <Button
        android:id="@+id/btnPlayGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="100dp"
        android:text="@string/play_game"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>